# allfes_scraper

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  sample.py  scrapy.cfg
allfes_scraper/: items.py  middlewares.py  pipelines.py  settings.py
