[tool.poetry]
name = "allfes_scraper"
version = "0.1.0"
description = ""
authors = ["maejimayuto <maejimayuto@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.1"
requests = "^2.27.1"
selenium = "^4.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
